# geo-embeddings-site

./: .gitignore  BestPractices.md  README.md  bestpractices.md  data-card.md  get-involved.md  glossary.md  implementations.md  index.md  model-card.md  package.json  pyproject.toml  standards.md
.github/workflows/: deploy.yml
.vitepress/: config.mjs
.vitepress/theme/: index.js  style.css
scripts/: build_tutorials.py
tutorials/: notebook-output.css  xarray_geospatial_embeddings_intro.ipynb
