[project]
name = "geo-embeddings-site"
version = "0.1.0"
description = "Docs and notebooks for the Geo-Embeddings site"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false

[dependency-groups]
docs = [
  "nbconvert>=7.16",
  "nbformat>=5.10",
]
notebooks = [
  "ipykernel>=6.29",
  "jupyterlab>=4.3",
  "matplotlib>=3.10",
  "obstore>=0.9.2",
  "s3fs>=2025.3.0",
  "xarray>=2025.1.0",
  "zarr>=3.1",
]
